--- a/HSHacks/Base.lproj/Main.storyboard
+++ b/HSHacks/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Updates-->
+        <!--Updates Nav View Controller - Updates-->
         <scene sceneID="W3I-pn-N6e">
             <objects>
-                <viewController storyboardIdentifier="updatesVC" title="Updates" id="CZ4-MO-1fc" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="updatesVC" title="Updates" id="CZ4-MO-1fc" customClass="UpdatesNavViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2VE-Yg-loa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -16,7 +16,13 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Announcements" id="KQE-F5-bdX"/>
+                                    <navigationItem title="Announcements" id="KQE-F5-bdX">
+                                        <barButtonItem key="rightBarButtonItem" image="share.png" id="aWH-Gc-QGH">
+                                            <connections>
+                                                <action selector="share:" destination="CZ4-MO-1fc" id="Kc7-Jr-qM7"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <containerView contentMode="scaleToFill" id="64O-zg-guE">
@@ -116,10 +122,10 @@
             </objects>
             <point key="canvasLocation" x="1244" y="-992"/>
         </scene>
-        <!--View Controller - Concierge-->
+        <!--Concierge Nav View Controller - Concierge-->
         <scene sceneID="ot8-2e-RuS">
             <objects>
-                <viewController title="Concierge" automaticallyAdjustsScrollViewInsets="NO" id="QUy-BD-bpt" sceneMemberID="viewController">
+                <viewController title="Concierge" automaticallyAdjustsScrollViewInsets="NO" id="QUy-BD-bpt" customClass="ConciergeNavViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gMD-aP-Fq6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -128,7 +134,13 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Concierge" id="f8I-g2-piu"/>
+                                    <navigationItem title="Concierge" id="f8I-g2-piu">
+                                        <barButtonItem key="rightBarButtonItem" image="share.png" id="Z1x-gC-lkP">
+                                            <connections>
+                                                <action selector="share:" destination="QUy-BD-bpt" id="OWv-38-zTU"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <containerView contentMode="scaleToFill" id="Imj-AG-FOR">
@@ -218,7 +230,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Chat" id="QR8-WY-Mk0">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="3aE-WV-tO1">
+                                        <barButtonItem key="rightBarButtonItem" image="logout.png" id="3aE-WV-tO1">
                                             <connections>
                                                 <action selector="logoutPressed:" destination="zZ2-Ja-P8W" id="Vd0-4l-wxu"/>
                                             </connections>
@@ -961,14 +973,12 @@
                             <view contentMode="scaleToFill" id="NWf-MJ-kQ1">
                                 <rect key="frame" x="60" y="48" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="n6h-6F-wcg">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="n6h-6F-wcg">
+                                <rect key="frame" x="60" y="48" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="xBN-Nq-k3j">
                                 <rect key="frame" x="145" y="270" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -1175,8 +1185,10 @@
         <image name="chat.png" width="30" height="30"/>
         <image name="clock.gif" width="200" height="200"/>
         <image name="hshacksLOGO.png" width="1000" height="1000"/>
+        <image name="logout.png" width="40" height="40"/>
         <image name="mentors.png" width="30" height="30"/>
-        <image name="updates.png" width="30" height="30"/>
+        <image name="share.png" width="40" height="40"/>
+        <image name="updates.png" width="77" height="77"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
